# transcriptor

./: .env.example  .gitignore  FRONTEND_SPEC.md  README.md  WORKPLAN.md  alembic.ini  deploy_changeset.py  deploy_images.py  install.sh  launch.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0004_fix_missing_columns.py
app/: config.py  db.py  main.py  storage.py
app/api/: deps.py
app/api/routes/: admin.py  auth.py  community.py  consent.py  leaderboard.py  progress.py  session.py  transcription.py
app/models/: __init__.py  batch.py  consent.py  event.py  line.py  page.py  transcription.py  user.py
app/services/: consent.py  dispatch.py  leaderboard.py  rules.py  transcriptions.py  users.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: ActionBar.module.css  ActionBar.tsx  ErrorBoundary.tsx  FlagPopover.module.css  FlagPopover.tsx  LineStrip.module.css  LineStrip.tsx  Skeleton.module.css  Skeleton.tsx  Toast.module.css  Toast.tsx  TranscriptionInput.module.css  TranscriptionInput.tsx  WorkHeader.module.css  WorkHeader.tsx
frontend/src/contexts/: SessionContext.tsx
frontend/src/guards/: AdminGuard.tsx  (+2 more)
scripts/: detect_lines.py  export_dataset.py  export_telemetry.py  import_batch.py  import_source_data.py  seed_demo.py  seed_dev.py
tests/: conftest.py  test_slice1.py  test_slice10.py  test_slice11.py  test_slice2.py  test_slice3.py  test_slice4.py  test_slice5.py  test_slice6.py  test_slice7.py  test_slice8.py  test_slice9.py
(+30 files in other folders)
