[project]
name = "transcriptor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
